fixed overflow for too long text

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,5 +14,5 @@ a{
 }
 
 body{
-    overflow: hidden;
+    // overflow: hidden;
 }
